k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knudon-backend
  namespace: knudon
spec:
  selector:
    app: knudon-backend
  ports:
    - port: 80
      targetPort: 8080
