k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knudon-frontend
  namespace: knudon
spec:
  selector:
    app: knudon-frontend
  ports:
    - port: 80
      targetPort: 80
