k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knudon-ingress
  namespace: knudon
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: knudon-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: knudon-frontend
            port:
              number: 80
